force-app/main/default/objects/PostcodeMapping__c/PostcodeMapping__c.object-meta.xml
<CustomObject>
    <label>Postcode Mapping</label>
    <nameField>
        <displayFormat>F2P{000000000}</displayFormat>
        <label>Postcode Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Postcode Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>