force-app/main/default/objects/PostcodeMapping__c/fields/Locality_Id__c.field-meta.xml
<CustomField>
    <fullName>Locality_Id__c</fullName>
    <description>StarTrack Locality Postcode Id</description>
    <formula>Postcode__r.Locality_Postcode_ID__c</formula>
    <label>Locality Id</label>
    <type>Text</type>
</CustomField>