force-app/main/default/objects/PostcodeMapping__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <label>Network</label>
    <referenceTo>Network__c</referenceTo>
    <relationshipLabel>Postcode Mappings</relationshipLabel>
    <relationshipName>Postcode_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>