force-app/main/default/objects/PostcodeMapping__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <label>Postcode</label>
    <referenceTo>Postcode__c</referenceTo>
    <relationshipLabel>Postcode Mappings</relationshipLabel>
    <relationshipName>Postcode_Mappings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>