force-app/main/default/objects/PostcodeMapping__c/fields/Run_Dock__c.field-meta.xml
<CustomField>
    <fullName>Run_Dock__c</fullName>
    <description>StarTrack: Capture run dock information</description>
    <label>Run Dock</label>
    <length>255</length>
    <type>Text</type>
</CustomField>