force-app/main/default/objects/PostcodeMapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Postcode__c</columns>
    <columns>Network__c</columns>
    <columns>UniqueKey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>